--- a/Test.ipynb
+++ b/Test.ipynb
@@ -6,7 +6,6 @@
       "name": "Test.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOz7kokOSovVFvY4RwmZBwO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,7 +32,19 @@
       "source": [
         "import numpy as np"
       ],
-      "execution_count": 1,
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "zvaXb2g8PMfz"
+      },
+      "source": [
+        "\r\n",
+        "arr = np.array([1, 2 , 3 ])"
+      ],
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -42,19 +53,21 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "zvaXb2g8PMfz",
-        "outputId": "c43b7b92-5fed-4efb-93d0-c0e20343ba86"
+        "id": "5FPEYPRTPYty",
+        "outputId": "19294538-185b-4067-a10d-4cae03ea59b7"
       },
       "source": [
-        "arr = np.array([1, 2 , 3 ])\r\n",
-        "print(arr)"
+        "print(arr)\r\n",
+        "arr2=[1,2,3,4,5]\r\n",
+        "print(arr2)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[1 2 3]\n"
+            "[1 2 3]\n",
+            "[1, 2, 3, 4, 5]\n"
           ],
           "name": "stdout"
         }
